# crates-insight

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: badges.rs  categories.rs  crates.rs  crates_categories.rs  crates_keywords.rs  keywords.rs  metadata.rs  mod.rs  prelude.rs  reserved_crate_names.rs  sync_history.rs  versions.rs
src/: main.rs
temp/: import.sql
