[package]
name = "crates-insight"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = ""
repository = "https://github.com/open-rust-Initiative/freighter"
documentation = ""
readme = "README.md"
description = """

"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
thiserror = "1.0.30"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
walkdir = "2.3.2"
reqwest = { version = "0.11.11", features = ["blocking"] }
timer = "0.2.0"
chrono = "0.4.22"
rand = "0.8.5"
sha2 = "0.10.5"
sea-orm = { version = "0.9.2", features = [ "sqlx-mysql","sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
tokio = { version = "1.18.1", features = ["full"] }
axum = "0.5.4"
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs"] }
tower-cookies = "0.6.0"
entity = { path = "entity" }


dotenv = "0.15.0"
tera = "1.15.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dev-dependencies]


[build-dependencies]